# ocs_archive

./: CHANGELOG  README.md  pyproject.toml  setup.py
.github/workflows/: build.yaml
ocs_archive/: __init__.py
ocs_archive/input/: __init__.py  file.py  filefactory.py  fitsfile.py  headerdata.py  lcofitsfile.py  tarwithfitsfile.py  thumbnailfile.py
ocs_archive/settings/: __init__.py  settings.py
ocs_archive/storage/: __init__.py  filesystemstore.py  s3store.py
tests/: test_datafiles.py  test_filestorage.py
tests/test_files/fits/: cpt1m010-kb70-20151219-0073-e10.fits.fz  cpt1m012-fl10-20151216-0073-e00.fits.fz
