[tool.poetry]
name = "ocs-archive"
version = "0.2.9"
description = "Base library for the science archive and ingester of an observatory control system"
authors = ["Your Name <you@example.com>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
astropy = ">=3,<6"
boto3 = ">=1,<2"
requests = ">=2,<3"
python-dateutil = ">=2,<3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<8"
responses = ">=0.16.0,<1"
coverage = ">=6,<7"

[tool.poetry.group.CI.dependencies]
coveralls = ">=3,<4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
